src/test/deca/context/invalid/homemade/tests/test27_redefinition_method/test27_redefinition_method4.deca
// test invalide de la règle 2.7

class B {
    int val(float x, int a){}
}
class A extends B {
    int val( int a, float x){}
}